# web_courses_lms

./: .dockerignore  .env.ci.example  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  dump.rdb  pyproject.toml
.github/workflows/: cicd.yml
config/: __init__.py  celery.py  settings.py  urls.py
lms/: admin.py  apps.py  models.py  paginators.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
lms/migrations/: 0001_initial.py  0002_alter_lesson_course.py  0002_initial.py  0003_course_last_update_lesson_last_update.py  0003_course_owner_lesson_owner.py
nginx/: nginx.conf
users/: admin.py  apps.py  models.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  views.py
users/management/commands/: create_mock_data.py  csu.py
users/migrations/: 0001_initial.py  0002_payment.py  0002_payment_pay_amount_default.py  0003_subscription.py  0004_alter_subscription_course_alter_subscription_user.py
