[tool.poetry]
name = "webcourseslms"
version = "0.1.0"
description = ""
authors = ["alisheykhov99@gmail.com"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
django = "^5.2.3"
psycopg2-binary = "^2.9.10"
pillow = "^11.2.1"
djangorestframework = "^3.16.0"
python-dotenv = "^1.1.1"
black = "^25.1.0"
flake8 = "^7.3.0"
isort = "^6.0.1"
django-filter = "^25.1"
djangorestframework-simplejwt = "^5.5.0"
ipython = "^9.4.0"
coverage = "^7.9.2"
drf-yasg = "^1.21.10"
currencyconverter = "^0.18.8"
stripe = "^12.3.0"
celery = "^5.5.3"
eventlet = "^0.40.1"
redis = "^6.2.0"
django-celery-beat = "^2.8.1"
mypy = "^1.16.1"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"